# SynPlanner

./: .dockerignore  .gitignore  .rayignore  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  README.rst  app.Dockerfile  app.py  cli.Dockerfile  docker-compose.yml  gui.Dockerfile  pyproject.toml  pytest.ini  readthedocs.yaml
.github/workflows/: build-cli-docker.yml  build-docker.yml  ci.yml  pypi.yml  test-pypi.yml
colab/: general_tutorial.ipynb  planning_benchmarking.ipynb  retrosynthetic_planning.ipynb  routes_clustering.ipynb
conda/: synplan_env_linux.yaml  synplan_linux.yaml
configs/: combined_ranking_filtering_policy.yaml  extraction.yaml  planning.yaml  planning_combined_policies.yaml  planning_value.yaml  policy_training.yaml  reactions_filtration.yaml  reactions_standardization.yaml  rules_extraction.yaml  standardization.yaml  tuning.yaml
dagster_synplanner/: Dockerfile  README.md  __init__.py  repository.py
dagster_synplanner/api/: __init__.py  app.py  models.py
dagster_synplanner/deploy/: dagster.yaml  docker-compose.yml  workspace.yaml
dagster_synplanner/frontend/: index.html  package.json  vite.config.ts
dagster_synplanner/jobs/: __init__.py  pipelines.py
dagster_synplanner/ops/: __init__.py  data_download.py  data_processing.py  model_training.py  planning.py
dagster_synplanner/resources/: __init__.py  config.py
dagster_synplanner/schedules/: __init__.py
dagster_synplanner/sensors/: __init__.py  file_sensors.py
docs/: api.rst  cli.rst  conf.py  configuration.rst  data.rst  data_download.rst  development.rst  index.rst  installation.rst  interfaces.rst  methods.rst  pr_review.rst  release_notes.rst  tutorials.rst
docs/_static/: switcher.json
docs/api_reference/: modules.rst  synplan.chem.data.rst  synplan.chem.reaction_rules.manual.rst  synplan.chem.reaction_rules.rst  synplan.chem.rst  synplan.interfaces.rst  synplan.mcts.rst  synplan.ml.networks.rst  synplan.ml.rst  synplan.ml.training.rst  synplan.route_quality.rst  synplan.rst  synplan.utils.rst
docs/configuration/: configuration.rst  extraction.rst  filtration.rst  filtration_config.rst  planning.rst  policy.rst  standardization.rst  value.rst
docs/data/: data.rst  download.rst  formats.rst
docs/get_started/: data_download.rst  docker_images.rst  index.rst  installation.rst
docs/installation/: conda.rst  installation.rst  manual.rst
docs/interfaces/: cli.rst  gui.rst  interfaces.rst  python.rst
docs/methods/: extraction.rst  filtration.rst  mcts.rst  methods.rst  planning.rst  policy.rst  priority_rules.rst  standardization.rst  value.rst
docs/tutorial/: data_curation.ipynb  general_tutorial.ipynb  ranking_policy_training.ipynb  retrosynthetic_planning.ipynb  rules_extraction.ipynb  value_network.rst
docs/tutorial_files/: ranking_policy_training.ipynb  retrosynthetic_planning.ipynb  rules_extraction.ipynb  value_network.rst
docs/tutorials/: Step-1_Data_Curation.ipynb  Step-1_Data_Curation.nblink  Step-2_Rules_Extraction.ipynb  Step-3_Policy_Training.ipynb  Step-4_Retrosynthetic_Planning.ipynb  Step-4_Retrosynthetic_Planning.nblink  SynPlanner_Pipeline.ipynb  data_curation.ipynb  data_curation.nblink  general_tutorial.ipynb  general_tutorial.nblink  policy_training.ipynb  policy_training.nblink  retrosynthetic_planning.ipynb  retrosynthetic_planning.nblink  rules_extraction.ipynb  rules_extraction.nblink  tutorials.rst
docs/user_guide/: 00_Welcome_to_Chython.ipynb  00_Welcome_to_Chython.nblink  01_Coming_from_RDKit.ipynb  01_Coming_from_RDKit.nblink  02_Data_Curation.ipynb  02_Data_Curation.nblink  03_Rules_Extraction.ipynb  03_Rules_Extraction.nblink  04_Policy_Training.ipynb  04_Policy_Training.nblink  05_Retrosynthetic_Planning.ipynb  05_Retrosynthetic_Planning.nblink  06_Clustering.ipynb  06_Clustering.nblink  06_Tree_Analysis.ipynb  07_Clustering.ipynb  07_Protection_Scoring.ipynb  07_Protection_Scoring.nblink  08_Combined_Ranking_Filtering_Policy.ipynb  08_Combined_Ranking_Filtering_Policy.nblink  08_Protection_Scoring.ipynb  09_Combined_Ranking_Filtering_Policy.ipynb  09_NMCS_Algorithms.ipynb  09_NMCS_Algorithms.nblink  10_NMCS_Algorithms.ipynb  10_Tree_Analysis.ipynb  10_Tree_Analysis.nblink  11_Planning_with_RDKit.ipynb  11_Planning_with_RDKit.nblink  12_Rule_Analysis.ipynb  12_Rule_Analysis.nblink  13_Priority_Rules.ipynb  Step-2_Rules_Extraction.nblink  Step-3_Policy_Training.nblink  Step-5_Clustering.nblink  Step-6_Protection_Scoring.nblink  SynPlanner_Pipeline.nblink  cli_interface.rst  data.rst  index.rst  (+2 more)
notebooks_dev/: Notebook_0_Run_training.ipynb  Notebook_1_Run_tree.ipynb  Notebook_2_Rule_stat.ipynb  Notebook_3_Policy_exp_rate.ipynb  Notebook_4_New_route_display.ipynb  Notebook_5_Rule_profile.ipynb
scripts/: __init__.py
scripts/sascore_bench/: __init__.py  config.yaml  plot_results.py  run_benchmark.py
synplan/: __init__.py
synplan/chem/: __init__.py  precursor.py  rdkit_compat.py  rdkit_utils.py  reaction.py  utils.py
synplan/interfaces/: cli.py  gui.py
synplan/mcts/: __init__.py  (+6 more)
tests/: conftest.py
tutorials/: 00_Welcome_to_Chython.ipynb  01_Coming_from_RDKit.ipynb  02_Data_Curation.ipynb  03_Rules_Extraction.ipynb  04_Policy_Training.ipynb  05_Retrosynthetic_Planning.ipynb  06_Clustering.ipynb  06_Tree_Analysis.ipynb  07_Clustering.ipynb  07_Protection_Scoring.ipynb  08_Combined_Ranking_Filtering_Policy.ipynb  08_Protection_Scoring.ipynb  09_Combined_Ranking_Filtering_Policy.ipynb  10_NMCS_Algorithms.ipynb  10_Tree_Analysis.ipynb  11_Planning_with_RDKit.ipynb  12_Rule_Analysis.ipynb  13_Priority_Rules.ipynb  14_Bond_freeze_break.ipynb  Combined_ranking_filtering_policy.ipynb  NMCS_Algorithms.ipynb  Policy-training_new.ipynb  Policy-training_new.py  Step-1_Data_Curation.ipynb  Step-2_Rules_Extraction.ipynb  Step-3_Policy_Training.ipynb  Step-4_Retrosynthetic_Planning.ipynb  Step-5_Clustering.ipynb  Step-6_Protection_Scoring.ipynb  SynPlanner_Pipeline.ipynb  analyse_rules.ipynb  data_curation.ipynb  general_tutorial.ipynb  planning_tutorial.ipynb  retrosynthetic_planning.ipynb  rules_extraction.ipynb  smarts_check.ipynb
(+131 files in other folders)
