[project]
name = "SynPlanner"
version = "1.3.2"
description = "Toolbox for chemical synthesis planning"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Laboratoire de Chemoinformatique", email = "tagirshin@gmail.com" }]

dependencies = [
  "chython-synplan>=1.91",
  "chytorch-synplan>=1.69",
  "chytorch-rxnmap-synplan>=1.6",
  "cgrtools-stable==4.2.13",
  "numpy>=2",
  "pandas>=1.4",
  "toytree>=2.0",
  "ray>=2.0",
  "click>=8.0.0",
  "huggingface-hub>=0.24.0",
  "adabelief-pytorch>=0.2.1",
  "torch-geometric>=2.4.0",
  "pytorch-lightning>=2",
  "ipykernel>6.29.0",
  "ipywidgets>8.1.0",
  "streamlit>1.35.1",
  "streamlit-ketcher>=0.0.1",
  "rdkit>2025.3.5",
  "matplotlib>=3.10.8",
]

# Extras to select PyTorch variant (cpu or cuda) - required for uv users
[project.optional-dependencies]
cpu = ["torch>=2.0"]
cuda = ["torch>=2.0"]

[dependency-groups]
dev = [
  "pytest>=7.4.3,<8",
  "black>=24.4.2,<25",
  "pytest-cov>=4.0,<5",
  "twine>=6.2.0,<7",
  "ruff>=0.14.4,<0.15",
]
docs = [
  "pydata-sphinx-theme>=0.15.4,<0.16",
  "pandoc>=2.3,<3",
  "ipython>=8.12.1,<9",
  "nbsphinx>=0.9.4,<0.10",
  "nbsphinx_link==1.3.1",
  "pypandoc-binary>=1.15,<2",
]

[project.scripts]
synplan = "synplan.interfaces.cli:synplan"
sascore-benchmark = "scripts.sascore_bench.run_benchmark:main"
sascore-plot = "scripts.sascore_bench.plot_results:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["synplan", "scripts"]

[tool.uv]
# cpu and cuda extras are mutually exclusive
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
