[project]
name = "SynPlanner"
version = "1.4.0"
description = "Toolbox for chemical synthesis planning"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Laboratoire de Chemoinformatique", email = "tagirshin@gmail.com" }]

dependencies = [
  "chython-synplan[racer-default]>=1.93",
  "chytorch-synplan>=1.70",
  "chytorch-rxnmap-synplan>=1.7",
  "numpy>=2",
  "pandas>=1.4",
  "toytree>=2.0",
  "ray>=2.0",
  "click>=8.0.0",
  "huggingface-hub>=0.24.0",
  "adabelief-pytorch>=0.2.1",
  "torch-geometric>=2.4.0",
  "pytorch-lightning>=2",
  "ipykernel>6.29.0",
  "ipywidgets>8.1.0",
  "streamlit>1.35.1",
  "streamlit-ketcher>=0.0.1",
  "rdkit>=2023.9.1",
  "matplotlib>=3.7",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "safetensors>=0.4",
]

# Extras to select PyTorch variant - required for uv users
[project.optional-dependencies]
cpu = ["torch>=2.0"]
cu126 = ["torch>=2.0"]
cu128 = ["torch>=2.0"]

[dependency-groups]
dev = [
  "pytest>=7.4.3,<8",
  "black>=24.4.2,<25",
  "pytest-cov>=4.0,<5",
  "twine>=6.2.0,<7",
  "ruff>=0.14.4,<0.15",
  "jupyterlab>=4.0",
]
docs = [
  "pydata-sphinx-theme>=0.15.4,<0.16",
  "pandoc>=2.3,<3",
  "ipython>=8.12.1,<9",
  "nbsphinx>=0.9.4,<0.10",
  "pypandoc-binary>=1.15,<2",
  "myst-parser>=4.0",
]

[project.scripts]
synplan = "synplan.interfaces.cli:synplan"
sascore-benchmark = "scripts.sascore_bench.run_benchmark:main"
sascore-plot = "scripts.sascore_bench.plot_results:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["synplan", "scripts"]

[tool.uv]
# PyTorch backend extras are mutually exclusive
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["synplan/chem/reaction_routes"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by black
    "E722",   # bare except — to be addressed later
    "B905",   # zip() without strict= — too noisy for scientific code
    "SIM108", # ternary operator — sometimes if/else is clearer
    "SIM115", # open-file-with-context-handler — needs refactoring
    "RUF002", # ambiguous unicode in docstrings — non-breaking hyphens
    "RUF003", # ambiguous unicode in comments — non-breaking hyphens
    "RUF013", # implicit Optional — to be addressed later
    "F405",   # names from star imports — to be addressed later
    "F403",   # star imports — suppressed globally, per-file for __init__
    "F821",   # undefined names — to be investigated
    "B006",   # mutable argument default — to be addressed later
    "B904",   # raise-without-from — to be addressed later
    "RUF012", # mutable class default without ClassVar — to be addressed later
    "SIM102", # collapsible-if — sometimes nested ifs are clearer
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
