[project]
name = "SynPlanner"
version = "1.4.4"
description = "Toolbox for chemical synthesis planning"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Laboratoire de Chemoinformatique", email = "tagirshin@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "chython-synplan[racer-default]>=1.95",
  "chytorch-synplan>=1.70",
  "chytorch-rxnmap-synplan>=1.7",
  "numpy>=2",
  "pandas>=1.4",
  "toytree>=2.0",
  "click>=8.0.0",
  "huggingface-hub>=0.24.0",
  "adabelief-pytorch>=0.2.1",
  "torch-geometric>=2.4.0",
  "pytorch-lightning>=2.3.3,!=2.6.2,!=2.6.3",
  "ipykernel>6.29.0",
  "ipywidgets>8.1.0",
  "streamlit>1.35.1",
  "streamlit-ketcher>=0.0.1",
  "rdkit>=2023.9.1",
  "matplotlib>=3.7",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "protobuf>=6.0",
]

# Extras to select PyTorch variant - required for uv users
[project.optional-dependencies]
cpu = ["torch>=2.0"]
cu126 = ["torch>=2.0"]
cu128 = ["torch>=2.0"]
wandb = ["wandb>=0.17"]
mlflow = ["mlflow>=2"]
loggers = [
  "wandb>=0.17",
  "mlflow>=2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "twine>=6.2.0,<7",
  "ruff>=0.14.4,<0.15",
  "jupyterlab>=4.5.7",
  "grpcio-tools>=1.78.0",
]
docs = [
  "pydata-sphinx-theme>=0.15.4,<0.16",
  "pandoc>=2.3,<3",
  "ipython>=8.12.1,<9",
  "nbsphinx>=0.9.4,<0.10",
  "pypandoc-binary>=1.15,<2",
  "myst-parser>=4.0",
]

[project.scripts]
synplan = "synplan.interfaces.cli:synplan"
sascore-benchmark = "scripts.sascore_bench.run_benchmark:main"
sascore-plot = "scripts.sascore_bench.plot_results:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["synplan", "scripts"]
artifacts = ["*.tsv", "*.csv", "*.yaml", "*.json"]

[tool.uv]
# Supply-chain hardening.
exclude-newer = "2026-05-17"

# Floors on transitive dependencies that ship CVE fixes.
constraint-dependencies = [
  "urllib3>=2.7.0",          # GHSA-38jv-5279-wg99, GHSA-gm62-xv2j-4w53, GHSA-qccp-gfcp-xxvc
  "gitpython>=3.1.50",       # GHSA-rpm5-65cw-6hj4, CVE-2026-44243, CVE-2026-44244, GHSA-mv93-w799-cj2w
  "jupyter-server>=2.18.0",  # GHSA-5mrq-x3x5-8v8f, CVE-2026-35397, CVE-2026-40110
  "pillow>=12.2.0",          # CVE-2026-40192 (FITS bomb), CVE-2026-42308 (PSD OOB)
  "tornado>=6.5.5",          # CVE-2026-31958, CVE-2026-35536
  "mistune>=3.2.1",          # CVE-2026-33079 (ReDoS)
  "lxml>=6.1.0",             # CVE-2026-41066 (XXE)
  "aiohttp>=3.13.4",         # CVE-2026-22815, CVE-2026-34515, CVE-2026-34516, CVE-2026-34525
  "cryptography>=46.0.7",    # CVE-2026-39892
  "nbconvert>=7.17.1",       # CVE-2026-39377, CVE-2026-39378 (path traversal)
  # cachedmethods pin removed: chython-synplan now vendors its own caching
  # decorators (chython/_cache.py) so the third-party package is no longer
  # a transitive dependency.
]

# PyTorch backend extras are mutually exclusive
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# -- optional bump-my-version compatibility ----------------------------------
[tool.bumpversion]
current_version = "1.4.4"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# NOTE: docs/_static/switcher.json, docs/get_started/docker_images.rst, and
# CHANGELOG.md need manual updates for release notes and published image tags.

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["synplan/chem/reaction_routes"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long — handled by ruff format
    "E722",   # bare except — to be addressed later
    "B905",   # zip() without strict= — too noisy for scientific code
    "SIM108", # ternary operator — sometimes if/else is clearer
    "SIM115", # open-file-with-context-handler — needs refactoring
    "RUF002", # ambiguous unicode in docstrings — non-breaking hyphens
    "RUF003", # ambiguous unicode in comments — non-breaking hyphens
    "F405",   # names from star imports — to be addressed later
    "F403",   # star imports — suppressed globally, per-file for __init__
    "F821",   # undefined names — to be investigated
    "B006",   # mutable argument default — to be addressed later
    "RUF012", # mutable class default without ClassVar — to be addressed later
    "SIM102", # collapsible-if — sometimes nested ifs are clearer
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# -- ty type checker ---------------------------------------------------------
# Most chython types are dynamic unions (MoleculeContainer | QueryContainer | ...)
# which cause false positives. Only enforce rules that catch real bugs.
[tool.ty.rules]
# False positives from chython/rdkit/torch/numpy dynamic types
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
not-subscriptable = "ignore"
invalid-method-override = "ignore"
not-iterable = "ignore"
call-non-callable = "ignore"
no-matching-overload = "ignore"
index-out-of-bounds = "ignore"
missing-argument = "ignore"      # chython Reactor has multiple constructors
invalid-type-form = "ignore"     # chython stubs use `any` instead of `Any`
unresolved-import = "ignore"     # rdkit uses dynamic imports (SA_Score, Descriptors)
invalid-return-type = "ignore"   # chython union narrowing false positives
invalid-assignment = "ignore"    # chython union narrowing false positives
invalid-parameter-default = "ignore" # chython defaults
# Keep enabled (catches real bugs like undefined names)
# unresolved-reference = "error"   (default)
